Fixed contact form sizing issue on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
@@ -231,7 +233,7 @@ p{
     position: relative;
     overflow: hidden;
     box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
-    min-height: 800px;
+    min-height: 400px;
 }
 
 .testimonials h3,
@@ -239,120 +241,6 @@ p{
     padding: 10px;
     margin: 0;
     flex-shrink: 0;
-}
-/*-----carousel-----*/
-.carousel{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-wrap: nowrap;
-    -webkit-overflow-scrolling: touch;
-    scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
-    scroll-padding: 0 16px;
-    margin: auto;
-}
-
-.carousel-tracker-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    margin: 0;
-    overflow: hidden;
-  }
-
-.carousel-track{
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    transition: transform 3000ms ease-in-out;
-
-}
-
-.carousel-slide{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
-    
-}
-.carousel-slide-current-slide {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-
-.carousel-slide img{
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    object-fit: cover !important;
-}
-
-.carousel-button-left,
-.carousel-button-right{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    width: 35px;
-    height: 35px;
-
-}
-.carousel-button i.fa{
-    font-size: 28px;
-    cursor: pointer;
-}
-.carousel-button-left {
-    left: 0px;
-    background-color: rgba(234,217,134, 0.4);
-    z-index: 6;
-}
-  
-.carousel-button-right {
-    right: 0px;
-    background-color: rgba(234,217,134, 0.4);
-    z-index: 5;
-}
-
-.carousel-nav{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 10px, 0;
-}
-.carousel-indicator,
-.carousel-indicator-current-slide {
-    border: none;
-    background-color: rgba(0, 0, 0, 0.2);
-    height: 15px;
-    width: 15px;
-    margin: 0 8px;
-    padding: 0;
-    cursor: pointer;
-}
-
-.carousel-indicator:hover,
-.carousel-indicator-current-slide:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.carousel-indicator-current-slide {
-  background-color: #f6e58d;
 }
 
 /*-----cta------*/
@@ -491,4 +379,14 @@ p{
     border: 1px solid #f6e58d;
     box-sizing: border-box;
     resize: none;
+}
+@media (max-width: 800px){
+    .contact-col{
+        flex-basis: 100%;
+        
+    }
+    .contact-col form{
+        width: 100%;
+        max-width: 100%;
+    }
 }
